--- a/carrito.html
+++ b/carrito.html
@@ -54,8 +54,7 @@
     </div>
     
 
-
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/carrito.js"></script>
     <script src="js/main.js"></script>
 </body>
